kubernetes/ponto-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hackaton-fiap-ponto-deployment
  labels:
    app: hackaton-fiap-ponto-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hackaton-fiap-ponto-deployment
  template:
    metadata:
      labels:
        app: hackaton-fiap-ponto-deployment
    spec:
      containers:
        - name: c-hackaton-fiap-deployment
          image: 168173199034.dkr.ecr.us-east-1.amazonaws.com/hackaton-fiap-ponto:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /ponto/liveness
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 30
          resources:
            requests:
              cpu: 200m

---

apiVersion: v1
kind: Service
metadata:
  name: ponto
spec:
  selector:
    app: hackaton-fiap-ponto-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
